--- a/dashboard/tpc-manager.html
+++ b/dashboard/tpc-manager.html
@@ -31,7 +31,7 @@
 
 		// You can access the NodeCG api anytime from the `window.nodecg` object
 		// Or just `nodecg` for short. Like this!:
-		nodecg.log.info('Here\'s an example of using NodeCG\'s logging API!');
+		// nodecg.log.info('Here\'s an example of using NodeCG\'s logging API!');
 	</script>
 </body>
 </html>
